# uba

./: .gitignore  Makefile.am  autogen.sh  configure.ac
demo/: Makefile.am  UbaCreator.xml  UbaService.xml  client.c  demo  demo.config.in  service.c  session.conf.in  uba-creator.c  uba-creator.h  uba-demo.c  uba-example.c  uba-marshallers.list  uba-service.c  uba-service.h
demo/services/: eu.adeal.uba.example.service.in  eu.adeal.ubi.demo.service.in
tests/: .gitignore  Makefile.am  TESTS  e-mock-dbus-session.c  e-test-session.c  e-uba-container.c  m-mock-objects.c  m-uba-testsession.c  m-uba.c  mock-dbus-session.c  s-mock-dbus-session.c  s-test-session.c  s-test-session.h  s-uba-container.c  s-uba-container.h  t-uba-container-scrollable.c  uba-test-session.c  uba-test-session.h
uba/: .gitignore  Makefile.am  UbaCreator.xml  UbaService.xml  uba-container.c  uba-container.h
